--- a/www/index.html
+++ b/www/index.html
@@ -87,8 +87,9 @@
 			<% }); %>
     </script>
     <script type="text/html" id="deckInfoTemplate">
-    	<div class="title">Deck Information
+    	<div class="title">
     		<div class="button close fa-ban"></div>
+    		<div class="text">Deck Information</div>
     		<div class="clearfix"></div>
     	</div>
     	<div class="line">
@@ -109,8 +110,9 @@
     	</div>
     </script>
     <script type="text/html" id="reviewModeTemplate">
-    	<div class="title">Review Mode
+    	<div class="title">
     		<div class="button close fa-ban"></div>
+    		<div class="text">Review Mode</div>
     		<div class="clearfix"></div>
     	</div>
     	<div class="option">
@@ -181,8 +183,9 @@
     	</div>
     </script>    
     <script type="text/html" id="selectItemTemplate">
-    	<div class="title"><%= title %>
+    	<div class="title">
     		<div class="button close fa-ban"></div>
+    		<div class="text"><%= title %></div>
     		<div class="clearfix"></div>
     	</div>
     	<% for(var i = 0; i < items.length; ++i){ %>
@@ -191,8 +194,15 @@
     			<div class="clearfix"></div>
     		</div>
     	<% }; %>
+    	<% if(canCreate){ %>
+	    	<div class="variant">
+				<div class="checkbox fa-square-o"  data-target=''></div>
+				New: <input class="new-item"/>
+				<div class="clearfix"></div>
+			</div>
+		<% }; %>
     	<div class="commands">
-    		<div class="button select">select</div>
+    		<div class="button select"><%= actionName %></div>
     	</div>
     </script>
 </html>
