--- a/www/index.html
+++ b/www/index.html
@@ -209,19 +209,19 @@
     	<div class="import screen">
 	    	<div class="header">
 	    		<div class="button back-button fa-arrow-left left"></div>
-	    		<div class="title">Cards Import (<%= lang %>)</div>
+	    		<div class="title">Cards Import [<span class="step">1/2</span>] -> today(<%= lang %>) </div>
 	    		<div class="clearfix"></div>
 	    	</div>
 	    	<div class="content">
 		    	<div class="loading">
-		    		<div class="">Connecting server... </div>
+		    		<div class="message">Connecting to the server <span class="connecting"></span></div>
 		    	</div>
 		    	<div class="languages hidden">
 		    		<div class="message">Select source language</div>
 		    		<div class="langs-list"></div>
 		    	</div>
 		    	<div class="decks hidden">
-		    		<div class="message">Select language: <span class="sourceLang"</span></div>
+		    		<div class="message">Selected language: <span class="sourceLang"</span></div>
 		    		<div class="message">Select deck to import</div>
 		    		<div class="decks-list"></div>
 		    	</div>
@@ -229,6 +229,9 @@
 		</div>
     </script>
     <script type="text/html" id="buttonTemplate">
-    	<div class="button item-button" data-target="<%= item %>"><%= item %></div>
+    	<div class="button item-button" data-target="<%= item %>">
+    		<%= item %>
+    		<div class="loading"></div>
+    	</div>
     </script>
 </html>
