--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
         <div id="menu-overlay" class="menu-overlay hidden"></div>
         <div id="menu" class="menu hidden"></div>
         <div id="dialog" class="dialog hidden"></div>
-        <!--script type="text/javascript" src="phonegap.js"></script-->
+        <script type="text/javascript" src="phonegap.js"></script>
         <script src="js/lib/require.js" data-main="js/config.js"></script>
         <!--script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
