www folder content is built from src parts

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,7 @@
         <div id="dialog" class="dialog hidden"></div>
         <!-- todo: conditional load of phonegap if it is the device -->
         <!--script type="text/javascript" src="phonegap.js"></script-->
-        <script src="js/require.js" data-main="js/config.js"></script>
-        <script src="js/lang-flashcards.min.js"></script>
+        <script src="js/lib/require.js" data-main="js/config.js"></script>
         <!--script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
