corrected overlay view class/id common classes moved into index.scss

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <div class="body"></div>
-        <div id="menu-overlay" class="menu-overlay hidden"></div>
+        <div id="overlay" class="overlay hidden"></div>
         <div id="menu" class="menu hidden"></div>
         <div id="dialog" class="dialog hidden"></div>
         <!-- todo: conditional load of phonegap if it is the device -->
