DecksView and CardView converted to view components

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <title>lang-flashcards</title>
     </head>
     <body>
-        <div class="body"></div>
+        <!--div class="body"></div-->
         <!-- todo: conditional load of phonegap if it is the device -->
         <!--script type="text/javascript" src="phonegap.js"></script-->
         <script src="js/lib/require.js" data-main="js/config.js"></script>
