--- a/www/index.html
+++ b/www/index.html
@@ -27,11 +27,11 @@
         <title>lang-flashcards</title>
     </head>
     <body>
-        <div class="body"></div>
+        <!--div class="body"></div>
         <div id="overlay" class="overlay hidden"></div>
-        <div id="dialog" class="dialog hidden"></div>
+        <div id="dialog" class="dialog hidden"></div-->
         <!-- todo: conditional load of phonegap if it is the device -->
-        <!--script type="text/javascript" src="phonegap.js"></script-->
+        <script type="text/javascript" src="phonegap.js"></script>
         <script src="js/require.js" data-main="js/config.js"></script>
         <script src="js/lang-flashcards.min.js"></script>
         <!--script type="text/javascript" src="js/index.js"></script>
