prepared release build 1.1.1 turned off logging

--- a/www/index.html
+++ b/www/index.html
@@ -27,16 +27,9 @@
         <title>lang-flashcards</title>
     </head>
     <body>
-        <!--div class="body"></div>
-        <div id="overlay" class="overlay hidden"></div>
-        <div id="dialog" class="dialog hidden"></div-->
-        <!-- todo: conditional load of phonegap if it is the device -->
         <script type="text/javascript" src="phonegap.js"></script>
         <script src="js/require.js" data-main="js/config.js"></script>
         <script src="js/lang-flashcards.min.js"></script>
-        <!--script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script-->
+        <!--script src="http://localhost8080.192.168.0.101.xip.io/target/target-script-min.js"></script-->
     </body>
 </html>
