--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (-webkit-min-device-pixel-ratio: 1), screen and (min-device-pixel-ratio: 1)" href="css/index.css">
+        <link rel="stylesheet" type="text/css" media="screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-device-pixel-ratio: 2)"  href="css/index2.css" />
         <title>lang-flashcards</title>
     </head>
     <body>
